--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jest": "^26.6.0",
-    "supertest": "^6.0.0",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.0.0"
   }
 }
